@@ -9,6 +9,7 @@ Version 2.41.1
 
 The following bugs were resolved with this release:
 
+  [32269] RISC-V IFUNC resolver cannot access gp pointer
   [32626] math: math: log10p1f is not correctly rounded
   [32627] math: math: sinhf is not correctly rounded
   [32630] math: math: tanf is not correctly rounded for all rounding
